# taskwarrior-git-backend

./: .gitignore  CHANGELOG.md  README.md  cabal.project  flake.nix  hie.yaml  taskwarrior-git-backend.cabal
src-bin/: Main.hs
src/Taskwarrior/Git/: Command.hs  Config.hs  Hooks.hs  Merge.hs  Repo.hs
